<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="open_search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="de.darksoon.radiowave.action.OPEN_SEARCH"
            android:targetClass="de.darksoon.radiowave.MainActivity"
            android:targetPackage="de.darksoon.radiowave" />
    </shortcut>

    <shortcut
        android:shortcutId="open_favorites"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_favorites_short"
        android:shortcutLongLabel="@string/shortcut_favorites_long">
        <intent
            android:action="de.darksoon.radiowave.action.OPEN_FAVORITES"
            android:targetClass="de.darksoon.radiowave.MainActivity"
            android:targetPackage="de.darksoon.radiowave" />
    </shortcut>

    <shortcut
        android:shortcutId="open_player"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_player_short"
        android:shortcutLongLabel="@string/shortcut_player_long">
        <intent
            android:action="de.darksoon.radiowave.action.OPEN_PLAYER"
            android:targetClass="de.darksoon.radiowave.MainActivity"
            android:targetPackage="de.darksoon.radiowave" />
    </shortcut>

    <shortcut
        android:shortcutId="open_settings"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_settings_short"
        android:shortcutLongLabel="@string/shortcut_settings_long">
        <intent
            android:action="de.darksoon.radiowave.action.OPEN_SETTINGS"
            android:targetClass="de.darksoon.radiowave.MainActivity"
            android:targetPackage="de.darksoon.radiowave" />
    </shortcut>
</shortcuts>
